--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -1,6 +1,8 @@
-\chapter*{Publications}
-\addcontentsline{toc}{chapter}{Publications}
-\markboth{\uppercase{Publications}}{\uppercase{Publications}}
+\chapter*{Declaration}
+\addcontentsline{toc}{chapter}{Declaration}
+\markboth{\uppercase{Declaration}}{\uppercase{Declaration}}
+
+I hereby declare that this dissertation is composed by myself and all the contents has not been submitted to this or any other universities for a degree. The materials of some chapters have been published in the following conference proceedings or journals.
 
 \begin{itemize}
   \item Wei Li, Rui Zhao, \textbf{Tong Xiao}, and Xiaogang Wang, ``DeepReID: Deep Filter Pairing Neural Network for Person Re-Identification.'' In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2014.
