--- a/frontmatter/frontmatter.tex
+++ b/frontmatter/frontmatter.tex
@@ -34,7 +34,7 @@
 \input{frontmatter/abstract_cn}     % Traditional Chinense Abstract
 \input{frontmatter/abstract_en}     % English Abstract
 \input{frontmatter/acknowledgments} % Acknowledgements
-\input{frontmatter/publications}    % List of Publications
+\input{frontmatter/declaration}     % List of Publications
 % \input{frontmatter/nomenclature}    % Nomenclature
 % \input{frontmatter/Demos}   				% Demos and Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
