--- a/mainmatter/multi_domain.tex
+++ b/mainmatter/multi_domain.tex
@@ -90,11 +90,11 @@ name & \specialcell{kernel size/\\stride} & \specialcell{output size} & \#1$\tim
 \hline\hline
 input & & $3\times 144\times 56$ & & & & & & \\
 \hline
-\specialcell{conv1 --\\conv3} & $3\times 3/2$ & $32\times 144\times 56$ & & & & & & \\
-% \hline
-% conv2 & $3\times 3/2$ & $32\times 144\times 56$ & & & & & & \\
-% \hline
-% conv3 & $3\times 3/2$ & $32\times 144\times 56$ & & & & & & \\
+conv1 & $3\times 3/1$ & $32\times 144\times 56$ & & & & & & \\
+\hline
+conv2 & $3\times 3/1$ & $32\times 144\times 56$ & & & & & & \\
+\hline
+conv3 & $3\times 3/1$ & $32\times 144\times 56$ & & & & & & \\
 \hline
 pool3 & $2\times 2/2$ & $32\times 72\times 28$ & & & & & & \\
 \hline
