More tech roadmap content. Marked red

--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -13,14 +13,18 @@ I hereby declare that this dissertation is composed by myself and all the conten
 
   \item Cheng Tai, \textbf{Tong Xiao}, Yi Zhang, Xiaogang Wang, and Weinan E, ``Convolutional Neural Networks with Low-rank Regularization.'' In \textit{Proceedings of the International Conference on Learning Representations} (\textit{\textbf{ICLR}}), 2016.
 
-  \item Kai Kang, Hongsheng Li, Junjie Yan, Xingyu Zeng, Bin Yang, \textbf{Tong Xiao}, Cong Zhang, Zhe Wang, Ruohui Wang, Xiaogang Wang, and Wanli Ouyang, ``T-CNN: Tubelets with convolutional neural networks for object detection from videos.'' \textit{IEEE Transactions on Circuits and System for Video Technology} (\textit{\textbf{TCSVT}}), under review.
+  \item Kai Kang, Hongsheng Li, Junjie Yan, Xingyu Zeng, Bin Yang, \textbf{Tong Xiao}, Cong Zhang, Zhe Wang, Ruohui Wang, Xiaogang Wang, and Wanli Ouyang, ``T-CNN: Tubelets with convolutional neural networks for object detection from videos.'' \textit{IEEE Transactions on Circuits and System for Video Technology} (\textit{\textbf{TCSVT}}), to be published.
 
-  \item Xingyu Zeng, Wanli Ouyang, Junjie Yan, Hongsheng Li, \textbf{Tong Xiao}, Kun Wang, Yu Liu, Yucong Zhou, Bin Yang, Zhe Wang, Hui Zhou, and Xiaogang Wang, ``Crafting GBD-Net for Object Detection'' (\textit{\textbf{TPAMI}}), under review.
+  \item Xingyu Zeng, Wanli Ouyang, Junjie Yan, Hongsheng Li, \textbf{Tong Xiao}, Kun Wang, Yu Liu, Yucong Zhou, Bin Yang, Zhe Wang, Hui Zhou, and Xiaogang Wang, ``Crafting GBD-Net for Object Detection'' (\textit{\textbf{TPAMI}}), to be published.
 
   \item \textbf{Tong Xiao}, Shuang Li, Bochao Wang, Liang Lin, and Xiaogang Wang, ``Joint Detection and Identification Feature Learning for Person Search.'' In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2017.
 
   \item Shuang Li, \textbf{Tong Xiao}, Hongsheng Li, Bolei Zhou, Dayu Yue, and Xiaogang Wang, ``Person Search with Natural Language Description.'' In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2017.
 
   \item Kai Kang, Hongsheng Li, \textbf{Tong Xiao}, Wanli Ouyang, Junjie Yan, Xihui Liu, and Xiaogang Wang, ``Object Detection in Videos with Tubelet Proposal Networks.'' In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2017.
+
+  \item Shuang Li, \textbf{Tong Xiao}, Hongsheng Li, Wei Yang, and Xiaogang Wang, ``Identity-Aware Textual-Visual Matching with Latent Co-attention.'' In \textit{Proceedings of the IEEE International Conference on Computer Vision} (\textit{\textbf{ICCV}}), 2017.
+
+  \item Yantao Shen, \textbf{Tong Xiao}, Hongsheng Li, Shuai Yi, Xiaogang Wang, ``Learning Deep Neural Networks for Vehicle Re-ID with Visual-spatio-temporal Path Proposals.'' In \textit{Proceedings of the IEEE International Conference on Computer Vision} (\textit{\textbf{ICCV}}), 2017.
 
 \end{itemize}
