Use black for links

--- a/frontmatter/frontmatter.tex
+++ b/frontmatter/frontmatter.tex
@@ -1,9 +1,9 @@
 \pdfbookmark[0]{Ph.D. Thesis: Scalable Human Identification with Deep Learning}{Title}
 
 \title{\usefont{OT1}{cmr}{bx}{n}\selectfont \Huge Scalable Human Identification\\[16pt] with Deep Learning}
-\author{\href{http://xiaotong.me/}{\LARGE{\textbf{XIAO, Tong}}}}
+\author{\LARGE{\textbf{XIAO, Tong}}}
 \degree{1}  % 1 for PhD, 2 for MPhil, 3 for MSc
-\dept{\href{http://www.ee.cuhk.edu.hk/}{Electronic Engineering}}
+\dept{Electronic Engineering}
 \submitdate{\today}
 
 \pagestyle{fancy}
