--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -41,7 +41,7 @@
   colorlinks=true,
   anchorcolor=black,
   filecolor=magenta,
-  linkcolor=[rgb]{0.098,0.463,0.824},
+  linkcolor=black,
   citecolor=[rgb]{0.098,0.463,0.824},
   menucolor=[rgb]{0.098,0.463,0.824},
   urlcolor=[rgb]{0.098,0.463,0.824}}
